<resources>
    <string name="app_name">Firebase</string>
    <string name="home">home</string>
    <string name="users">users</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="user_fragment">users fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="join_with_us">Sign In</string>
    <string name="name">Name</string>
    <string name="register_now">Signup now</string>
    <string name="continue_to_log_in">Continue to LogIn</string>
    <string name="this_is_a_message">This is a Message</string>
    <string name="message">Message</string>
    <string name="User">"user "</string>
    <string name="Log_in">Log In</string>
    <string name="SignIn">SignIn</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Confirmation">"CONFIRM OTP "</string>
    <string name="confirm_otp">validate</string>
    <string name="otp">* * * * *</string>
    <string name="resend_otp">resend otp</string>
    <string name="countrycode">+91</string>
    <string name="Friends">Friends</string>
    <string name="Chats">Chats</string>
    <string name="inset_name">please enter name</string>
    <string name="select_phone_number">enter phone number</string>
    <string name="err_msg_select_country_code">please enter country code</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_subtext">"please enter the verification code sent to "</string>
    <string name="validate">Validate</string>
    <string name="password_no">* * * * * *</string>
    <string name="inset_otp">enter otp</string>
    <string name="phone">Phone Number</string>
    <string name="lastMessage">message</string>
    <string name="logout">Logout</string>
    <string name="type_message">Type a message</string>
    <string name="this_is_sent_message">this is sent message</string>
    <string name="this_is_receive_message">this is receive message</string>
</resources>